# leti_piaa_lab6

./: CMakeLists.txt  Readme.md
src/: ACAlgorithm.cpp  ACAlgorithm.h  Bohr.cpp  Bohr.h  Node.h  aho_corasick.cpp  joker.cpp
test/: ACTest.cpp  ACTest.h  aho_corasick_test.cpp  joker_test.cpp
